--- a/index.html
+++ b/index.html
@@ -33,6 +33,31 @@
       </ul>
     </div>
   </nav>
+
+  <!-- Hero Section -->
+  <div class="hero" id="home">
+    <div class="hero__container">
+      <h1 class="hero__heading">Choose your <span>colors</span></h1>
+      <p class="hero__description">Unlimited Possibilities</p>
+      <button class="main__btn"><a href="#">Explore</a></button>
+    </div>
+  </div>
+
+  <!-- About Section -->
+<div class="main" id="about">
+  <div class="main__container">
+    <div class="main__img--container">
+      <div class="main__img--card">ICON</div>
+    </div>
+    <div class="main__content">
+      <h1>What do we do?</h1>
+      <h2>We help businesses scale</h2>
+      <p>Schedule a call to learn more about our services</p>
+      <button class="main__btn"><a href="#">Schedule call</a></button>
+    </div>
+  </div>
+</div>
+
   <script src="app.js"></script>
 </body>
 </html>
