--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Responsive Website</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/ca3a658ed7.js" crossorigin="anonymous"></script>
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous"> -->
 </head>
 <body>
   <!-- Navbar Section -->
@@ -47,7 +49,7 @@
 <div class="main" id="about">
   <div class="main__container">
     <div class="main__img--container">
-      <div class="main__img--card">ICON</div>
+      <div class="main__img--card"><i class="fas fa-layer-group"></i></div>
     </div>
     <div class="main__content">
       <h1>What do we do?</h1>
