--- a/index.html
+++ b/index.html
@@ -46,46 +46,62 @@
   </div>
 
   <!-- About Section -->
-<div class="main" id="about">
-  <div class="main__container">
-    <div class="main__img--container">
-      <div class="main__img--card"><i class="fas fa-layer-group"></i></div>
-    </div>
-    <div class="main__content">
-      <h1>What do we do?</h1>
-      <h2>We help businesses scale</h2>
-      <p>Schedule a call to learn more about our services</p>
-      <button class="main__btn"><a href="#">Schedule call</a></button>
+  <div class="main" id="about">
+    <div class="main__container">
+      <div class="main__img--container">
+        <div class="main__img--card"><i class="fas fa-layer-group"></i></div>
+      </div>
+      <div class="main__content">
+        <h1>What do we do?</h1>
+        <h2>We help businesses scale</h2>
+        <p>Schedule a call to learn more about our services</p>
+        <button class="main__btn"><a href="#">Schedule call</a></button>
+      </div>
     </div>
   </div>
-</div>
 
-<!-- Services Section -->
-<div class="services" id="services">
-  <h1>Our Services</h1>
-  <div class="services__wrapper">
-    <div class="services__card">
-      <h2>Custom Colorways</h2>
-      <p>AI Powered Technology</p>
-      <div class="services__btn"><button>Get Started</button></div>
-    </div>
-    <div class="services__card">
-      <h2>Are you Ready?</h2>
-      <p>Take the Leap!</p>
-      <div class="services__btn"><button>Get Started</button></div>
-    </div>
-    <div class="services__card">
-      <h2>Full Gradients</h2>
-      <p>100 Combinations</p>
-      <div class="services__btn"><button>Get Started</button></div>
-    </div>
-    <div class="services__card">
-      <h2>Infinite Choices</h2>
-      <p>1000's of Colors</p>
-      <div class="services__btn"><button>Get Started</button></div>
+  <!-- Services Section -->
+  <div class="services" id="services">
+    <h1>Our Services</h1>
+    <div class="services__wrapper">
+      <div class="services__card">
+        <h2>Custom Colorways</h2>
+        <p>AI Powered Technology</p>
+        <div class="services__btn"><button>Get Started</button></div>
+      </div>
+      <div class="services__card">
+        <h2>Are you Ready?</h2>
+        <p>Take the Leap!</p>
+        <div class="services__btn"><button>Get Started</button></div>
+      </div>
+      <div class="services__card">
+        <h2>Full Gradients</h2>
+        <p>100 Combinations</p>
+        <div class="services__btn"><button>Get Started</button></div>
+      </div>
+      <div class="services__card">
+        <h2>Infinite Choices</h2>
+        <p>1000's of Colors</p>
+        <div class="services__btn"><button>Get Started</button></div>
+      </div>
     </div>
   </div>
-</div>
+
+  <!-- Features Section -->
+  <div class="main" id="sign-up">
+    <div class="main__container">
+      <div class="main__content">
+        <h1>Join Our Team</h1>
+        <h2>Sign Up Today</h2>
+        <p>See what makes us different</p>
+        <button class="main__btn"><a href="#">Sign Up</a></button>
+      </div>
+      <div class="main__img--container">
+        <div class="main__img--card" id="card-2"><i class="fas fa-users"></i></div>
+      </div>
+
+    </div>
+  </div>
 
   <script src="app.js"></script>
 </body>
