--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="footer__logo">
           <a href="/" id="footer__logo">COLOR</a>
         </div>
-        <p class="website__rights">© COLOR 2020. All rights reserved</p>
+        <p class="website__rights">© COLOR <span id="current-year"></span>. All rights reserved.</p>
         <div class="social__icons">
           <a href="/" class="social__icon--link" target="_blank"><i class="fab fa-facebook"></i></a>
           <a href="/" class="social__icon--link" target="_blank"><i class="fab fa-instagram"></i></a>
